--- a/proposal/bibliography.bib
+++ b/proposal/bibliography.bib
@@ -85,7 +85,6 @@ doi="10.1007/978-3-662-05320-1_14",
 url="http://dx.doi.org/10.1007/978-3-662-05320-1_14"
 }
 @article{Sperduti1997,
-abstract = {Standard neural networks and statistical methods are usually believed to be inadequate when dealing with complex structures because of their feature-based approach. In fact, feature-based approaches usually fail to give satisfactory solutions because of the sensitivity of the approach to the a priori selection of the features, and the incapacity to represent any specific information on the relationships among the components of the structures. However, we show that neural networks can, in fact, represent and classify structured patterns. The key idea underpinning our approach is the use of the so called "generalized recursive neuron", which is essentially a generalization to structures of a recurrent neuron. By using generalized recursive neurons, all the supervised networks developed for the classification of sequences, such as backpropagation through time networks, real-time recurrent networks, simple recurrent networks, recurrent cascade correlation networks, and neural trees can, on the whole, be generalized to structures. The results obtained by some of the above networks (with generalized recursive neurons) on the classification of logic terms are presented.},
 author = {Sperduti, Alessandro and Starita, Antonina},
 doi = {10.1109/72.572108},
 issn = {10459227},
@@ -100,4 +99,72 @@ url = {http://ieeexplore.ieee.org/document/572108/},
 volume = {8},
 year = {1997}
 }
+@article{Maedche2001,
+ author = {Maedche, Alexander and Staab, Steffen},
+ title = {Ontology Learning for the Semantic Web},
+ journal = {IEEE Intelligent Systems},
+ issue_date = {March 2001},
+ volume = {16},
+ number = {2},
+ month = mar,
+ year = {2001},
+ issn = {1541-1672},
+ pages = {72--79},
+ numpages = {8},
+ url = {http://dx.doi.org/10.1109/5254.920602},
+ doi = {10.1109/5254.920602},
+ acmid = {630627},
+ publisher = {IEEE Educational Activities Department},
+ address = {Piscataway, NJ, USA},
+} 
+@inproceedings{dAmatoSTMG16,
+  added-at = {2016-06-06T00:00:00.000+0200},
+  author = {d'Amato, Claudia and Staab, Steffen and Tettamanzi, Andrea G. B. and Minh, Tran Duc and Gandon, Fabien L.},
+  biburl = {https://www.bibsonomy.org/bibtex/2383bd3c8b3d0a42649eaa145d4ada382/dblp},
+  booktitle = {SAC},
+  editor = {Ossowski, Sascha},
+  ee = {http://doi.acm.org/10.1145/2851613.2851842},
+  interhash = {107b5a597194a2814ca5fa1916089260},
+  intrahash = {383bd3c8b3d0a42649eaa145d4ada382},
+  isbn = {978-1-4503-3739-7},
+  keywords = {dblp},
+  pages = {333-338},
+  publisher = {ACM},
+  timestamp = {2016-06-07T11:38:58.000+0200},
+  title = {Ontology enrichment by discovering multi-relational association rules from ontological knowledge bases.},
+  url = {http://dblp.uni-trier.de/db/conf/sac/sac2016.html#dAmatoSTMG16},
+  year = 2016
+}
+@article{Wong2012,
+ author = {Wong, Wilson and Liu, Wei and Bennamoun, Mohammed},
+ title = {Ontology Learning from Text: A Look Back and into the Future},
+ journal = {ACM Comput. Surv.},
+ issue_date = {August 2012},
+ volume = {44},
+ number = {4},
+ month = sep,
+ year = {2012},
+ issn = {0360-0300},
+ pages = {20:1--20:36},
+ articleno = {20},
+ numpages = {36},
+ url = {http://doi.acm.org/10.1145/2333112.2333115},
+ doi = {10.1145/2333112.2333115},
+ acmid = {2333115},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Ontology learning, application of ontologies, concept discovery, semantic relation acquisition, term recognition},
+} 
+@online{WikidataStats,
+	title={https://tools.wmflabs.org/wikidata-todo/stats.php},
+	url={https://tools.wmflabs.org/wikidata-todo/stats.php},
+           urldate={2016-11-21}
+}
+@online{WikidataGame,
+	title={https://tools.wmflabs.org/wikidata-game/},
+	url={https://tools.wmflabs.org/wikidata-game/},
+	urldate={2016-11-21}
+}
+
+
 
