--- a/proposal/related_work.ltx
+++ b/proposal/related_work.ltx
@@ -32,7 +32,35 @@
 \begin{document}
 \maketitle
 
-\section*{Using Recurrent Neural Network for Learning Expressive Ontologies}
+\tableofcontents
+
+\section{Ontology learning}
+
+
+\subsection{Taxonomy learning – factoring the structure of a taxonomy into a semantic classification decision}
+\cite{pekar2002tl} defines a tree-ascending algorithm, which calculates the taxonomic similarity between nearest 
+neighbors. Evaluation shows that the algorithm is good at choosing the correct class for a new word. A combination of tree-ascending and k-nearest-neighbors was developed, which slightly improved the results in finding the correct class.  Another algorithm, tree-descending, was shown to be less efficient than standard classifiers. \\
+The paper solves a similar problem to the problem of my work. The exploitation of the taxonomy for classification
+proves to be effective and should therefore be incorporated into the solution of the thesis' problem.
+
+\subsection{Ontology Learning for the Semantic Web}
+\cite{Maedche2001}
+
+\subsection{Ontology Enrichment by Discovering Multi-Relational Association Rules from Ontological Knowledge Bases}
+The algorithm presented in \cite{dAmatoSTMG16} discovers relational association rules expressed SWRL, which
+allows the discovered rules to be directly integrated into the ontology and increase its expressiveness. This is done
+by detecting hidden patterns in a populated ontological knowledge base, and then obtaining relational association 
+rules from these pattern.\\
+Not relevant for the thesis, because the work is concerned with finding new rules in ontological KBs, while the task 
+of the thesis is to find new connections in the taxonomy of a KB. And other papers solve problems with a higher
+similarity to the thesis' problem.
+
+\subsection{Ontology learning from text}
+\cite{Wong2012}
+
+\section{Neural networks}
+
+\subsection{Using Recurrent Neural Network for Learning Expressive Ontologies}
 \TODO{Some parts of this summary should be moved to the comparison of neural networks.}
 \cite{PetrucciGR16} describes a recurrent neural network with short-term memory capabilities through Gated Recursive Units for usage in ontology learning. It is argued that recurrent neural networks can handle this task,
 because they proved to do well in handling natural languages, and therefore should also be able to ''handle the typical syntactic structures of encyclopedic text''. \\
@@ -55,23 +83,21 @@ The ontology learning process is described as transduction task. The typical str
 \item Gated Recursive Unit provides both networks with a short-term memory effect.
  \end{itemize}
 
-\section*{Recurrent neural network based language model}
+\subsection{Recurrent neural network based language model}
 \cite{MikolovKBCK10} describes a simple recurrent network language based model and tests its performance for 
-the task of speech recognition. It outperforms the typical n-gram model, but has a higher computational performance. Because speech recognition has only very few similarities to the concerned data of my work, 
+the task of speech recognition. It outperforms the typical n-gram model, but has a higher computational performance. \\
+Because speech recognition has only very few similarities to the concerned data of my work, 
 this paper has no further relevance for problem of this work. But it should be noted, that this paper shows the 
-power of recurrent neural networks in predicting contextual data and has the major advantage of having no limited 
-size of context.
+power of recurrent neural networks in predicting contextual data and not having a limited size of context.
 
-\section*{Taxonomy learning – factoring the structure of a taxonomy into a semantic classification decision}
-\cite{pekar2002tl} defines a tree-ascending algorithm, which calculates the taxonomic similarity between nearest 
-neighbors. Evaluation shows that the algorithm is good at choosing the correct class for a new word. A combination of tree-ascending and k-nearest-neighbors was developed, which slightly improved the results in finding the correct class.  Another algorithm, tree-descending, was shown to be less efficient than standard classifiers. \\
-The paper solves a similar problem to the problem of my work. The exploitation of the taxonomy for classification
-proves to be effective and should therefore be incorporated into the solution of the thesis' problem.
 
-\section*{Efficient Estimation of Word Representations in Vector Space}
-\cite{abs-1301-3781}
+\subsection{Efficient Estimation of Word Representations in Vector Space}
+\cite{abs-1301-3781} proposes two new neural network architectures, which compute continuous vector representations of words. It is possible to use algebraic operations on such word vectors. An example, which is mentioned in the paper $vector(''King'') - vector(''Man'') + vector(''Woman'')$ results into a vector that is very close
+to the representation of the word \textit{Queen}. The paper tries to maximize the accuracy of such operations by developing their architectures to ''preserve the linear regularities among words''. The Continuous Bag-of-Words Model (CBOW) and the Continuous Skip-gram Model were developed. CBOW is similar to the Feedforward Neural Net Language Model. It predicts the current word based on its context. Continuous Skip-Gram in contrast predicts the words before and after the current word.\\
+The results of different word vectors versions were compared by applying them to a similarity task. The proposed
+models are able to create word vectors with a higher syntactic and semantic accuracies than other existing models.
 
-\section*{Deep Neural Networks for Learning Graph Representations}
+\subsection{Deep Neural Networks for Learning Graph Representations}
 \cite{CaoLX16} describes a deep neural network, which creates deep graph representation model, in which a low 
 dimensional vector is created for each vertex in the graph. The method was tested on real datasets and 
 outperformed some state-of-the-art systems. It is able to handle noisy data, which may be important for the task of 
@@ -79,7 +105,7 @@ this work.  The output of this network, the graph representations, can be used a
 supervised classification. Therefore this network could be used for transforming the taxonomy of Wikidata into a 
 small-dimensional input format.
 
-\section*{Supervised neural networks for the classification of structures}
+\subsection{Supervised neural networks for the classification of structures}
 \cite{Sperduti1997} describes neural networks using generalized recursive neurons for the classification of structured patterns (e.g. concept graphs). The a-priori encoding of structures for use in the neural network has drawbacks. The authors propose the use a second neural network for encoding the structure, which is trained alongside the classification network. To solve this problem the generalized recursive neuron is introduced. An encoding network is constructed using this neurons. It creates a vector, which encodes the graph, and is finally fed into a feed-forward neural network for classification. \TODO{Read this paper again, I think misunderstood, what the network actually does.}
 
 \bibliographystyle{plain}
