--- a/proposal/proposal.ltx
+++ b/proposal/proposal.ltx
@@ -32,7 +32,7 @@
 \newtheorem*{problem}{Problem}
 
 
-\title{Extending taxonomic relations of root classes in the Wikidata knowledge base with neural networks}
+\title{Refinement of the Wikidata taxonomy with neural networks}
 \subtitle{Proposal for Bachelor thesis}
 \author{Alex Baier \\ abaier@uni-koblenz.de}
 
@@ -93,14 +93,14 @@ Let $W_1$ be the taxonomy of Wikidata, where only labeled root classes are consi
 On 7th November 2016 the following state applies  $|W_1| = 5332$. \\
 $W_1$ is the input for the described problem. \\
 Let $W_2$ be the refined output taxonomy. \\
-After the refinement process the following should apply: $|W_2| \ll |W_1|$. This means the number of class 
-hierarchies in the Wikidata taxonomy is significantly reduced. \\
+A refinement method is needed to significantly reduce the number of class hierarchies in the Wikidata taxonomy. After the refinement method is applied on $W_1$, which outputs $W_2$, the following should be true: 
+$|W_2| \ll |W_1|$.\\
 \\
 The refinement process can be  reduced to the following smaller task: \\
 For a class hierarchy $H_1 \in W_1$ find a class $c \in H_2 \in W_1\setminus \{H_1\}$, which is an appropriate superclass for $r = root(H_1)$. \\
 Combine $H_1 = (N_1, E_1)$ and $H_2 = (N_2, E_2)$ to a hierarchy $H = (N_1 \cup N_2, E_1 \cup E_2 \cup \{ (r, 
 c) \}$. \\
-The output taxonomy is defined as follows: $W_2 = (\{ H \} \cup W_2) \setminus \{H_1, H_2 \}$. Accordingly $|W_2| = |W_1| - 1$ 
+The output is $W_2 = (\{ H \} \cup W_2) \setminus \{H_1, H_2 \}$. Accordingly $|W_2| = |W_1| - 1$ 
 follows.\\
 Repeating this smaller task will eventually yield $|W_2| \ll |W_1|$.\\
 \\
