--- a/proposal/proposal.ltx
+++ b/proposal/proposal.ltx
@@ -27,6 +27,10 @@
 \newcounter{ToDoId}
 \newcommand{\TODO}[1]{\stepcounter{ToDoId}\textcolor{red}{\textbf{TODO \theToDoId: #1}}}
 
+\newcommand{\subclassof}{
+\ensuremath{\vartriangleleft_{subclass}}
+}
+
 \theoremstyle{definition}
 \newtheorem{definition}{Definition}
 \newtheorem*{problem}{Problem}
@@ -63,11 +67,32 @@ The exploitation of neural networks, which have been shown to be very powerful a
 
 \section{Problem statement}
 To define the problem following definitions are needed:
-\begin{definition}[Forest]
-A forest is a set of trees. Let $F$ be a forest, then $|F|$ is the number of trees in $F$.
+\begin{definition}[Directed Graph]
+A graph G is an ordered pair $G=(V, E)$, where $V$ is a set of vertices, and $E = \{ (v_1, v_2) \mid v_1, v_2 \in V \}$ 
+is a set of ordered pairs called directed edges, connecting the the vertices.
 \end{definition}
-\begin{definition}[In-Tree, Root Node]
-An in-tree is a directed, complete, acyclic graph.  Additionally from each node in the in-tree a directed path to the root node can be found. It can be represented as a tuple $(N, E)$, where $N$ is a set of nodes of the tree and $E = \{(n_1, n_2) | n_1, n_2 \in N\}$ is a set of directed edges. A node in an in-tree is a root node , if it has no outgoing edges. There is only one root node in an in-tree. Let $T = (N, E)$ be an in-tree, then $root(T) \in N$ is the root node of $T$.
+\begin{definition}[Predecessor, Successor]
+Let $G=(V, E)$ be a directed graph.\\
+$v_1 \in V$ is a predecessor of $v_2 \in V$, if there exists an edge so that $(v_1, v_2) \in E$.\\
+Let $v \in V$ be a vertice of G, then $pred(v) = \{ w \mid (w, v) \in E \}$ is the set of predecessors of $v$. \\
+$v_1 \in V$ is a successor of $v_2 \in V$, if there exists an edge so that $(v_2, v_1) \in E$.\\
+Let $v \in V$ be a vertice of G, then $succ(v) = \{ w \mid (v, w) \in E \}$ is the set of successors of $v$.
+\end{definition}
+\begin{definition}[Walk]
+Let $G = (V, E)$ be a directed graph. \\
+A walk $W$ of length $n \in \mathbb{N}$ is a sequence of vertices $W=(v_1,\ldots, v_n)$ with $v_1,\ldots, v_n \in V$, 
+so that $(v_i, v_{i+1}) \in E \; \forall i=1,\ldots,n-1$.
+\end{definition}
+\begin{definition}[Cycle]
+A walk $W=(v_1,\ldots, v_n)$ of length $n$ is called a cycle, if $v_1 = v_n$.
+\end{definition}
+\begin{definition}[Path]
+A walk $P = (v_1, \ldots, v_n)$ is a path from $v_1$ to $v_n$, if $v_i \neq v_j$ for all $i,j=1,\ldots,n$ with $i \neq j$.
+\end{definition}
+\begin{definition}[Acyclic Graph]
+A directed graph $G$ is called acyclic graph, if there are no cycles in $G$.
+\end{definition}
+\begin{definition}[Statement]
 \end{definition}
 \begin{definition}[Class]
 A class is a tuple $(id, label, Statements, Instances, wiki)$:
@@ -75,37 +100,46 @@ A class is a tuple $(id, label, Statements, Instances, wiki)$:
 	\item $id \in \mathbb{N}$, which is a numerical Wikidata item ID;
 	\item $label$, which is the, to $id$ corresponding,  English label in Wikidata;
 	\item $Statements$ is a set of statements about the class;
-	\item $Instances \in P(\mathbb{N})$ is the set of numerical Wikidata item IDs, which are instances of the class;
+	\item $Instances \in \mathcal{P}(\mathbb{N})$ is the set of numerical Wikidata item IDs, which are instances of 
+	the class;
 	\item $wiki$ is the, to the class corresponding, English Wikipedia article text.
 	\end{itemize}
 \end{definition}
-\begin{definition}[Statement]
-\end{definition}
-\begin{definition}[Class Hierarchy, Root Class]
-A class hierarchy is an in-tree, in which the nodes are classes. The directed edges describe the subclass-of
-relation between the child and the parent class. The root node in a class hierarchy is called root class.
-\end{definition}
 \begin{definition}[Taxonomy]
-A taxonomy is a forest of class hierarchies. The number of root classes in a taxonomy T is $|T|$.
+A taxonomy $T=(C, S)$ is a acyclic graph, where $C$ is a set of classes, and $S$ is a set of subclass-of relations
+between these classes.
 \end{definition}
+\begin{definition}[Subclass Relation]
+Let $T=(C, S)$ be a taxonomy.\\
+The transitive, ordered relation $\subclassof$ is defined.\\
+Let $c_1, c_2 \in C$. $c_1 \subclassof c_2$, if there is a path $P=(c_1, \ldots, c_2)$ from $c_1$ to $c_2$ in $T$.
+\end{definition}
+\begin{definition}[Root class]
+Let $T=(C, S)$ be a taxonomy.\\
+$r \in C$ is called root class of $T$, if $|succ(r)| = 0$.\\
+$root(T) = \{r \in C \mid  |succ(r)| = 0\}$ is the set of all root classes in $T$.
+\end{definition}
+Finally we can define our problem as the following task:
 \begin{problem}
 Let $W_1$ be the taxonomy of Wikidata, where only labeled root classes are considered. 
-On 7th November 2016 the following state applies  $|W_1| = 5332$. \\
-$W_1$ is the input for the described problem. \\
+On 7th November 2016 the following state applies  $|root(W_1)| = 5332$. \\
+$W_1 = (C, S)$ is the input for the described problem. \\
 Let $W_2$ be the refined output taxonomy. \\
-A refinement method is needed to significantly reduce the number of class hierarchies in the Wikidata taxonomy. After the refinement method is applied on $W_1$, which outputs $W_2$, the following should be true: 
-$|W_2| \ll |W_1|$.\\
+A refinement method is needed to significantly reduce the number of root classes in the Wikidata taxonomy. After 
+the refinement method is applied on $W_1$, which outputs $W_2$, the following should be true: 
+$|root(W_2)| \ll |root(W_1)|$.\\
 \\
 The refinement process can be  reduced to the following smaller task: \\
-For a class hierarchy $H_1 \in W_1$ find a class $c \in H_2 \in W_1\setminus \{H_1\}$, which is an appropriate superclass for $r = root(H_1)$. \\
-Combine $H_1 = (N_1, E_1)$ and $H_2 = (N_2, E_2)$ to a hierarchy $H = (N_1 \cup N_2, E_1 \cup E_2 \cup \{ (r, 
-c) \}$. \\
-The output is $W_2 = (\{ H \} \cup W_2) \setminus \{H_1, H_2 \}$. Accordingly $|W_2| = |W_1| - 1$ 
-follows.\\
+Let $r \in root(W_1)$.\\
+Find a $c \in C$ with $\neg (c \subclassof r)$, so that $c$ is the closest appropriate generalization of $r$. \\
+Connecting $r$ to $c$ with an edge produces the output taxonomy $W_2 = (C, S \cup \{ (r, c) \})$. 
+Accordingly $|root(W_2)| = |root(W_1)| - 1$ applies.\\
 Repeating this smaller task will eventually yield $|W_2| \ll |W_1|$.\\
 \\
-The problem is therefore to develop a method, which finds an appropriate superclass for a root class given the complete surrounding taxonomy.
+The problem can therefore be defined as developing a method, which finds, given a taxonomy $W=(C,S)$ and a 
+root class $r = root(W)$, the closest generalization of $r$.
 \end{problem}
+\TODO{Define what generalization means, what closest means?}
 
 \section{Related works}
 \TODO{Add literature about neural networks, ontology learning.}
