--- a/proposal/bibliography.bib
+++ b/proposal/bibliography.bib
@@ -156,15 +156,23 @@ year = {1997}
  keywords = {Ontology learning, application of ontologies, concept discovery, semantic relation acquisition, term recognition},
 } 
 @online{WikidataStats,
-	title={https://tools.wmflabs.org/wikidata-todo/stats.php},
-	url={https://tools.wmflabs.org/wikidata-todo/stats.php},
+	title={Wikidata Statistics},
+	url={\url{https://tools.wmflabs.org/wikidata-todo/stats.php}},
+	note={\url{https://tools.wmflabs.org/wikidata-todo/stats.php}},
            urldate={2016-11-21}
 }
 @online{WikidataGame,
-	title={https://tools.wmflabs.org/wikidata-game/},
-	url={https://tools.wmflabs.org/wikidata-game/},
+	title={Wikidata Game},
+	url={\url{https://tools.wmflabs.org/wikidata-game/}},
+	note={\url{https://tools.wmflabs.org/wikidata-game/}},
 	urldate={2016-11-21}
 }
-
+@online{sergestratan,
+	author={Serge Stratan},
+	title={Wikidata Taxonomy Browser (beta)},
+	url={\url{http://sergestratan.bitbucket.org/}},
+	note={\url{http://sergestratan.bitbucket.org/}},
+	urldate={2016-11-27}
+}
 
 
