Added new papers to related_work.

--- a/proposal/bibliography.bib
+++ b/proposal/bibliography.bib
@@ -174,5 +174,34 @@ year = {1997}
 	note={\url{http://sergestratan.bitbucket.org/}},
 	urldate={2016-11-27}
 }
-
-
+@INPROCEEDINGS{Zhang00neuralnetworks,
+    author = {Guoqiang Peter Zhang},
+    title = {Neural networks for classification: a survey},
+    booktitle = {and Cybernetics - Part C: Applications and Reviews},
+    year = {2000}
+}
+@article{KalchbrennerGB14,
+  author    = {Nal Kalchbrenner and
+               Edward Grefenstette and
+               Phil Blunsom},
+  title     = {A Convolutional Neural Network for Modelling Sentences},
+  journal   = {CoRR},
+  volume    = {abs/1404.2188},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1404.2188},
+  timestamp = {Thu, 01 May 2014 14:56:20 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/KalchbrennerGB14}
+}
+@article{GregorDGW15,
+  author    = {Karol Gregor and
+               Ivo Danihelka and
+               Alex Graves and
+               Daan Wierstra},
+  title     = {{DRAW:} {A} Recurrent Neural Network For Image Generation},
+  journal   = {CoRR},
+  volume    = {abs/1502.04623},
+  year      = {2015},
+  url       = {http://arxiv.org/abs/1502.04623},
+  timestamp = {Mon, 02 Mar 2015 14:17:34 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/GregorDGW15},
+}
