--- a/proposal/proposal.ltx
+++ b/proposal/proposal.ltx
@@ -167,7 +167,7 @@ $|root(W_2)| \ll |root(W_1)|$.\\
 \\
 The refinement process can be  reduced to the following smaller task: \\
 Let $r \in root(W_1)$.\\
-Find a $c \in C$ with $\neg (c \subclassof r)$, so that $c$ is the most similar superclass of $r$. \\
+Find a $c \in C$ with $\neg (c \subclassof r)$, so that $c$ is the most similar super class of $r$. \\
 Connecting $r$ to $c$ with an edge produces the output taxonomy $W_2 = (C, S \cup \{ (r, c) \})$. 
 Accordingly $|root(W_2)| = |root(W_1)| - 1$ applies.\\
 Repeating this smaller task will eventually yield $|W_2| \ll |W_1|$.\\
@@ -221,28 +221,38 @@ the paper's network show that is possibly to combine different neural networks t
 \TODO{Should I add other related works?}\\
 \\
 In conclusion the related work suggests a solution, which consists of multiple neural networks, which
-are connected in a series. In the first step multiple networks will be used to
+are connected in a pipeline. In the first step multiple networks will be used to
 represent the different aspects (taxonomic structure, Wiki article, statements, etc.) of the class
 as vectors, which then will be combined to one feature vector per class. In the following step
 a supervised classification method can be applied on the vector representations, which should
-result in finding the most similar superclass of the entered class.
+result in finding the most similar super class of the entered class.
 
 \section{Methodology}
-\TODO{Deprecated. Rewrite.}\\
-The main task of this work will be to develop a method for extending taxonomic relations of root classes based on neural networks. The task can be divided into the following subtasks: \\
+For solving the defined problem with a neural network, the following methodology is proposed:\\
 \\
-The root classes in the knowledge base have to be identified and analyzed. This should result in a comparison of
-similarities and characteristics of root classes in Wikidata. The purpose of this task is to identify, which data is available and how it is structured. \\ \\
-Two categories of to this challenge related work has to analyzed. The first category of related work is concerned
-with the topic of ontology and taxonomy learning. The second category is concerned with different applications of
-neural networks, and ways to represent complex data for usage in neural networks. Goal of this task should be
-to find an appropiate mapping of Wikidata root classes to feature vectors, which can be used by neural networks. \\ \\
-After the mapping of classes is defined, data can be collected per hand or possibly by crawling for training neural networks. The author will create a ground truth for the collected data. \\
-\\
-Finally different neural networks can be implemented and trained using existing libraries. The configurations
-of the networks will be improved by means of experimentation and literature review until a small enough error in testing is achieved. \\ 
-\\
-The real data, all 7142 root classes, will be applied on the best performing network(s). The results will be reviewed by the author. If it is possible a survey with the Wikidata community will be executed. A (random?) subset of the results will be presented to the community, and the participants of the survey will be asked, whether they think the generated  suggestions of the network are accurate and could be entered into Wikidata. Such a survey would be really important to confirm the validity and relevance of this work.
+First the current taxonomy of Wikidata needs to be analyzed. I should be answered, how many
+classes and especially root classes are available and what their characteristics are, e.g. number of instances and subclasses, how many and what kind of statements. This will allow a more focused search and analysis
+in the following step.\\
+The literature about neural networks needs be researched. Different neural network models will
+be analyzed and compared, regarding input, output, task and performance. Furthermore
+the neural networks should be compared to other solutions for the same tasks, so
+the decision to use neural networks can be motivated.\\
+This leads to the development of a new neural network architecture based on the researched networks,
+which is specialized to solve the defined problem. The decision made in the development will be justified based on
+the results of the previous steps.\\
+After the neural network is developed, the system needs to implemented and training data needs to be collected.
+The implemented network will be trained, and then tested. Reconfiguration of the network 
+and modification of training data will be repeated, until the test results are satisfactory.\\
+In the last step the neural network will be used on all identified root classes.
+An evaluation with the Wikidata community will be executed. In this evaluation participants
+will be asked to rate the results of the neural network. This will answer the question of how
+accurate the developed method is, and may identify problems, e.g. results are too general,
+a certain category of root classes could not be correctly classified at all.  The evaluation
+results will be analyzed and possible improvements for the network discussed.\\
+The evaluation with the Wikidata community is very important, because a tool based on
+the developed method should ideally be used by users to support the curation process in Wikidata.
+Therefore the community would need to agree with the results of the method, 
+otherwise such a tool would serve no practical purpose. 
 
 \section{Expected results}
 \TODO{What should I expect? NNs are powerful, so it is likely to work, if the architecture is well designed
